# rusty-mooring

./: .flake8  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  noxfile.py  pyproject.toml
.github/workflows/: CI.yml  test.yml
example/: solve_statics_and_plot.py  system.toml
python/rusty_mooring/: __init__.py  rusty_mooring.pyi
src/: config.rs  input.rs  lib.rs  mooring_system.rs
tests/: conftest.py  test_config.py  test_mooring_system.py  test_smoke.py
