[package]
name = "rusty-mooring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rusty_mooring"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19.0", features = ["extension-module"] }
serde = "1.0.164"
serde_derive = "1.0.164"
toml = "0.7.5"

[dev-dependencies]
float-cmp = "0.9.0"
