[package]
name = "rusty-mooring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "rusty_mooring"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20.1", features = ["extension-module"] }
serde = "1.0.193"
serde_derive = "1.0.193"
toml = "0.8.8"

[dev-dependencies]
float-cmp = "0.9.0"
