[build-system]
requires = ["maturin>=1.8,<1.9"]
build-backend = "maturin"

[project]
name = "rusty-mooring"
description = "Lovely Spam! Wonderful Spam!"
readme = "README.md"
requires-python = ">=3.7"
license = {file = "LICENSE"}
authors = [
  {name = "Matt Kramer", email = "mkramer@anaconda.com"},
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

dependencies = []

[project.optional-dependencies]
test = [
    "pytest<9.0.3",
    "pytest-cov",
    "mypy==1.19.1",
    "nox==2025.5.1",
]

[tool.black]
line-length = 100
target-version = ["py39"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
force_single_line = true
known_first_party = ["rusty_mooring"]

[tool.maturin]
python-source = "python"

[tool.pytest.ini_options]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
]
testpaths = "tests"
